samples/_failures_safe/1761665924_ba18db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d8f0d88.c: In function ‘main’:
./samples/SAFE/__tmp_7d8f0d88.c:159:20: error: expected ‘;’ at end of input
  159 |             fprintf
      |                    ^
      |                    ;
./samples/SAFE/__tmp_7d8f0d88.c:159:13: error: expected declaration or statement at end of input
  159 |             fprintf
      |             ^~~~~~~
./samples/SAFE/__tmp_7d8f0d88.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7d8f0d88.c:159:13: error: expected declaration or statement at end of input
